--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,14 +1,20 @@
-<p style="color: green"><%= notice %></p>
 
-<h1>Expenses</h1>
-
-<div id="expenses">
-  <% @expenses.each do |expense| %>
-    <%= render expense %>
-    <p>
-      <%= link_to "Show this expense", expense %>
-    </p>
-  <% end %>
+<%= link_to "New Expense", new_expense_path %>
+<div class="overflow-x-auto">
+  <table class="table table-zebra w-full">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Amount</th>
+        <th>Date</th>
+        <th>Category</th>
+      </tr>
+    </thead> 
+    <tbody>
+      <% @expenses.each do |expense| %>
+        <%= render "expenses/list" %> 
+      <% end %>
+    </tbody>
+  </table>
 </div>
-
-<%= link_to "New expense", new_expense_path %>
