--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="cupcake">
   <head>
     <title>ExpenseApp</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -10,9 +10,14 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+  <body class="min-h-full">
+    <main class="container mx-auto my8 flex flex-col items-center">
+
+      <%= render "shared/nav" %>
+      <%= render"shared/flash" %>
+      
+      <%= yield %>
+
+    </main>
   </body>
 </html>
