--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,31 +2,27 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+  <div class="flex flex-col items-center">
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name  %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="my-2">
+      <%= f.text_field :name, autofocus: true, placeholder: "Name", class: "input input-bordered input-accent w-full max-w-xs"  %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="my-2">
+      <%= f.email_field :email,  autocomplete: "email",  placeholder: "Email", class: "input input-bordered input-accent w-full max-w-xs" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="my-2">
+      <%= f.password_field :password, autocomplete: "current-password", placeholder: "Password", class: "input input-bordered input-accent w-full max-w-xs" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+    <div class="my-2">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Password Confimation", class: "input input-bordered input-accent w-full max-w-xs" %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Sign up", class: "btn btn-sm btn-primary" %>
+    </div>
   </div>
 <% end %>
 
