--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,19 +1,30 @@
 
-<%= link_to "New Expense", new_expense_path %>
+<%= link_to "Add Expense", new_expense_path, class: "my-4 btn btn-sm btn-info" %>
 <div class="overflow-x-auto">
   <table class="table table-zebra w-full">
     <thead>
       <tr>
-        <th>ID</th>
         <th>Name</th>
+        <th>Category</th>
         <th>Amount</th>
         <th>Date</th>
-        <th>Category</th>
+        <th>Status</th>
+        <th>Action</th>
+        
       </tr>
     </thead> 
     <tbody>
       <% @expenses.each do |expense| %>
-        <%= render "expenses/list" %> 
+        <tr>
+          <td><%= expense.user.name %></td>
+          <td><%= expense.name %></td>
+          <td><%= expense.amount %></td>
+          <td><%= expense.date %></td>
+          <td><%= expense.category.category %></td>
+          <td><%= link_to "Edit", edit_expense_path(expense) %></td>
+
+        </tr>
+
       <% end %>
     </tbody>
   </table>
