--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New expense</h1>
+<h1 class="text-lg">New expense</h1>
 
 <%= render "form", expense: @expense %>
 
 <br>
 
 <div>
-  <%= link_to "Back to expenses", expenses_path %>
+  <%= link_to "Back to expenses", expenses_path, class: "btn btn-sm btn-primary" %>
 </div>
