--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: expense) do |form| %>
   <% if expense.errors.any? %>
-    <div style="color: red">
+    <div class="alert alert-warning">
       <h2><%= pluralize(expense.errors.count, "error") %> prohibited this expense from being saved:</h2>
 
       <ul>
